--- a/Macrix_Application.csproj
+++ b/Macrix_Application.csproj
@@ -74,6 +74,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Data\XMLSerializer.cs" />
+    <Compile Include="Model\Common\NullableInt.cs" />
     <Compile Include="ViewModel\Commands\RelayCommand.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
